# week4_submission_aksh

./: README.md  week4_q2_final_answers.xlsx
week4_arm/: CMakeLists.txt
week4_arm/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week4_arm/install/week4_arm/lib/week4_arm/: fk_node.py  move_effector.py
week4_arm/install/week4_arm/share/week4_arm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
week4_arm/launch/: fk_node.launch.py
week4_arm/log/: latest_build
week4_arm/scripts/: fk_node  fk_node_3d  move_effector
